test/trivial/diten/printvisibleWrongValue.chpl
var xyzSymbol = 1;
__primitive("get visible symbols", "cheese");
